@@ -30,38 +30,12 @@
  * NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION
  * WITH THE ACCESS, USE OR PERFORMANCE OF THIS SOFTWARE.
  */
-package ucar.ma2;
+package ucar.nc2.constants;
 
 /**
- * Convenience routines for constructing one-off StructureData objects
- *
  * @author caron
- * @since Jan 19, 2009
+ * @since Jan 21, 2009
  */
-public class StructureDataFactory {
-
-  static public StructureData make(String name, String value) {
-    StructureMembers members = new StructureMembers("");
-    StructureMembers.Member m = members.addMember(name, null, null, DataType.STRING, new int[]{1});
-    StructureDataW sw = new StructureDataW(members);
-    Array dataArray = Array.factory(DataType.STRING, new int[]{1});
-    dataArray.setObject(dataArray.getIndex(), value);
-    sw.setMemberData(m, dataArray);
-    return sw;
-  }
-
-  static public StructureData make(StructureData s1, StructureData s2) {
-    return make(new StructureData[]{s1, s2});
-  }
-
-  static public StructureData make(StructureData[] sdatas) {
-    //if (sdatas.length == 1) return sdatas[0];
-    StructureDataComposite result = new StructureDataComposite();
-    for (StructureData sdata : sdatas) {
-      result.add(sdata);
-    }
-    return result;
-  }
-
-
+public class CF {
+  public enum FeatureType { point, station } 
 }
